[gd_scene load_steps=12 format=3 uid="uid://jo1dekatwx33"]

[ext_resource type="Texture2D" uid="uid://dx8mj6lmvp02u" path="res://sprites/board/board-top-left.png" id="1_fsslj"]
[ext_resource type="Script" path="res://board.gd" id="1_m6ae6"]
[ext_resource type="Texture2D" uid="uid://dp7whummjbm4t" path="res://sprites/board/board-top-middle.png" id="2_4g12m"]
[ext_resource type="ButtonGroup" uid="uid://bl5ys4kc6630l" path="res://board_button_group.tres" id="2_eq1fh"]
[ext_resource type="Texture2D" uid="uid://b1nmmlxxanovb" path="res://sprites/board/board-top-right.png" id="3_dimkb"]
[ext_resource type="Texture2D" uid="uid://b2t0cimba6054" path="res://sprites/board/board-middle-left.png" id="4_uhglb"]
[ext_resource type="Texture2D" uid="uid://chwwrdm2tau5r" path="res://sprites/board/board-middle.png" id="5_qviq7"]
[ext_resource type="Texture2D" uid="uid://d8neq646fgyj" path="res://sprites/board/board-middle-right.png" id="6_bi150"]
[ext_resource type="Texture2D" uid="uid://jqj1f2jrek7u" path="res://sprites/board/board-bottom-left.png" id="7_heb7c"]
[ext_resource type="Texture2D" uid="uid://b7dibtslddaaf" path="res://sprites/board/board-bottom-middle.png" id="8_phkpp"]
[ext_resource type="Texture2D" uid="uid://pkjsnbtor0du" path="res://sprites/board/board-bottom-right.png" id="9_nxi4r"]

[node name="Board" type="Node"]
script = ExtResource("1_m6ae6")
button_group = ExtResource("2_eq1fh")

[node name="BoardControl" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.38
anchor_top = 0.38
anchor_right = 1.34
anchor_bottom = 1.34
offset_left = -287.0
offset_top = -318.0
offset_right = -863.0
offset_bottom = -990.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4

[node name="TopLeftControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Button" type="TextureButton" parent="BoardControl/TopLeftControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("1_fsslj")
stretch_mode = 0

[node name="TopMiddleControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 32.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="Button" type="TextureButton" parent="BoardControl/TopMiddleControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("2_4g12m")
stretch_mode = 0

[node name="TopRightControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="Button" type="TextureButton" parent="BoardControl/TopRightControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("3_dimkb")
stretch_mode = 0

[node name="MiddleLeftControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0
grow_vertical = 2

[node name="Button" type="TextureButton" parent="BoardControl/MiddleLeftControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("4_uhglb")
stretch_mode = 0

[node name="MiddleControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="TextureButton" parent="BoardControl/MiddleControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("5_qviq7")
stretch_mode = 0

[node name="MiddleRightControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2

[node name="Button" type="TextureButton" parent="BoardControl/MiddleRightControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("6_bi150")
stretch_mode = 0

[node name="BottomLeftControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0

[node name="Button" type="TextureButton" parent="BoardControl/BottomLeftControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("7_heb7c")
stretch_mode = 0

[node name="BottomMiddleControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="TextureButton" parent="BoardControl/BottomMiddleControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("8_phkpp")
stretch_mode = 0

[node name="BottomRightControl" type="Control" parent="BoardControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0

[node name="Button" type="TextureButton" parent="BoardControl/BottomRightControl"]
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
toggle_mode = true
button_group = ExtResource("2_eq1fh")
texture_normal = ExtResource("9_nxi4r")
stretch_mode = 0

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.0
offset_top = -90.0
offset_right = 123.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 45
text = "New Game"

[connection signal="pressed" from="Button" to="." method="new_game"]
